# nix-flake-templates

./: README.org  flake.nix
c-raylib/: .gitignore  flake.nix
go-minimal/: .gitignore  flake.nix
python-flask/: flake.nix  pyproject.toml
typescript-aws-cdk/: .gitignore  flake.nix  package-lock.json  package.json
typescript-aws-cdk/infra/: .gitignore  bin.ts  cdk.json  hello-cdk-stack.ts  package.json  tsconfig.json
